--- a/Jpa-Study/src/main/resources/application.properties
+++ b/Jpa-Study/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/jpaneusoft?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/jpa_db?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=masida
+spring.datasource.password=3306
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
